# identique_mcp

./: .gitignore  README.md  idnumbers_mcp_server.py  main.py  pyproject.toml
.github/: workflow.yaml
src/identique_mcp/: __init__.py  server.py
