[project]
name = "identique-mcp"
version = "0.1.0"
description = "MCP server for validating and extracting information from national ID numbers worldwide"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Angus Hsu", email = "angus@example.com"}
]
keywords = ["mcp", "id-validation", "national-id", "identity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=2.8.0",
    "idnumbers>=1.11.0",
]

[project.urls]
"Homepage" = "https://github.com/AngusHsu/identique_mcp"
"Bug Reports" = "https://github.com/AngusHsu/identique_mcp/issues"
"Source" = "https://github.com/AngusHsu/identique_mcp"

[project.scripts]
identique-mcp = "identique_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/identique_mcp"]

[tool.uv]
dev-dependencies = []
